changed answer button heights to address an overflow issue when height of page is lower

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -76,7 +76,7 @@ body {
 
 .answer-btn {
    width: 75%;
-   height: 75%;   
+   height: 90%;   
    border-right: solid var(--second-txt-color) 0.25rem;
    border-bottom: solid var(--second-txt-color) 0.25rem;
    border-radius: 0.75rem;
